# AutoWS-Bench-101

./: pyproject.toml
fwrench/applications/: pipeline.py
fwrench/datasets/: ecg_dataset.py
fwrench/pre_training/: nmf.py
wrench/dataset/: dataset.py  utils.py
