[tool.poetry]
name = "fwrench"
version = "0.1.0"
description = "something"
authors = ["Kendall Park <kendallparkdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.11.6"              # to deal with pytorch
fire = "^0.5.0"
torch = "^2.1.2"
matplotlib = "^3.8.2"
pytorch-lightning = "<2.0.0"
snorkel = "^0.9.9"
lightning-bolts = "^0.7.0"
transformers = "^4.36.2"
clip = "^0.2.0"
ipywidgets = "^8.1.1"
bs4 = "^0.0.1"
numba = "^0.58.1"
sentence-transformers = "^2.2.2"
pytokenizations = "^0.8.4"
seqeval = "^1.2.2"
flyingsquid = "^0.0.0a0"
pgmpy = "^0.1.24"
numbskull = {git = "https://github.com/KendallPark/numbskull.git"}
snorkel-metal = "^0.5.0"
tensorboardx = "^2.6.2.2"
lie-learn = {git = "https://github.com/AMLab-Amsterdam/lie_learn"}
googledrivedownloader = "^0.4"
lightgbm = "^4.2.0"
lief = "^0.13.2"
ecco = {git = "https://github.com/KendallPark/ecco.git"}


[tool.poetry.group.torch.dependencies]
numpy = "^1.26.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
